Sd 2584 refactor ebl to include irrelevants (#417)